--- a/Android/scenes/voice/voice/src/main/res/layout/voice_activity_chatroom.xml
+++ b/Android/scenes/voice/voice/src/main/res/layout/voice_activity_chatroom.xml
@@ -16,15 +16,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <io.agora.scene.voice.ui.widget.barrage.SubtitleLayout
+        android:id="@+id/subtitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cTopView"
+        android:layout_width="match_parent"
+        android:layout_marginTop="14dp"
+        android:layout_height="20dp"/>
+
     <io.agora.scene.voice.ui.widget.mic.Room2DMicLayout
         android:id="@+id/rvChatroom2dMicLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/glHorizontal45"
-        app:layout_constraintTop_toBottomOf="@+id/cTopView" />
+        app:layout_constraintTop_toBottomOf="@+id/subtitle" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glHorizontal45"
@@ -56,13 +64,6 @@
         android:layout_width="300dp"
         android:layout_height="0dp"/>
 
-    <io.agora.scene.voice.ui.widget.like.LikeLayout
-        android:id="@+id/like_view"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/chat_bottom"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"/>
-
     <io.agora.scene.voice.ui.widget.mic.Room3DMicLayout
         android:id="@+id/rvChatroom3dMicLayout"
         android:layout_width="match_parent"
@@ -75,18 +76,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cTopView" />
 
+    <com.opensource.svgaplayer.SVGAImageView
+        android:id="@+id/svga_view"
+        android:layout_width="match_parent"
+        android:layout_height="720dp"
+        android:scaleType="centerCrop"
+        android:background="@color/voice_transparent"
+        app:layout_constraintBottom_toTopOf="@+id/chat_bottom"
+        />
+
     <io.agora.scene.voice.ui.widget.primary.ChatPrimaryMenuView
         android:id="@+id/chat_bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <com.opensource.svgaplayer.SVGAImageView
-        android:id="@+id/svga_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/voice_transparent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+    <io.agora.scene.voice.ui.widget.like.LikeLayout
+        android:id="@+id/like_view"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/chat_bottom"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
