--- a/Android/scenes/voice/voice/src/main/res/layout/voice_no_data_layout.xml
+++ b/Android/scenes/voice/voice/src/main/res/layout/voice_no_data_layout.xml
@@ -1,4 +1,5 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/base_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
