--- a/Android/scenes/voice/voice_spatial/src/main/res/layout/voice_spatial_view_room_live_top.xml
+++ b/Android/scenes/voice/voice_spatial/src/main/res/layout/voice_spatial_view_room_live_top.xml
@@ -190,23 +190,42 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.67" />
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/mtChatroomAgoraSound"
+    <LinearLayout
+        android:id="@+id/llChatroomAgoraSound"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/voice_bg_rect_left_radius13_black20"
-        android:drawableEnd="@drawable/voice_icon_room_notice_arrow_right"
-        android:drawablePadding="2dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingVertical="3dp"
         android:paddingStart="10dp"
-        android:paddingTop="3dp"
         android:paddingEnd="15dp"
-        android:paddingBottom="3dp"
-        android:text="@string/voice_chatroom_social_chat"
-        android:textColor="@color/voice_white"
-        android:textSize="@dimen/voice_sp_10"
         app:layout_constraintBottom_toBottomOf="@+id/ll"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ll" />
+        app:layout_constraintTop_toTopOf="@+id/ll">
+
+        <ImageView
+            android:id="@+id/ivIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="2dp"
+            android:src="@drawable/voice_icon_room_notice_compass" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mtChatroomAgoraSound"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="@string/voice_chatroom_social_chat"
+            android:textColor="@color/voice_white"
+            android:textSize="@dimen/voice_sp_10" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:src="@drawable/voice_icon_room_notice_arrow_right" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
