--- a/Android/scenes/show/src/main/res/layout/show_live_detail_top.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_top.xml
@@ -123,6 +123,120 @@
         app:layout_constraintTop_toBottomOf="@id/clRoomTitle"
         tools:visibility="visible">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/show_statistic_up"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TableRow android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_encode_resolution" />
+
+            <TextView
+                android:id="@+id/tvStatisticEncodeFPS"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_encode_fps" />
+        </TableRow>
+
+        <TableRow android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_delay" />
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_up_loss_package" />
+        </TableRow>
+
+        <TableRow android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_bitrate" />
+
+            <TextView
+                android:id="@+id/tvStatisticUpNet"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_up_net_speech" />
+        </TableRow>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/show_statistic_down"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TableRow android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_receive_resolution" />
+
+            <TextView
+                android:id="@+id/tvStatisticReceiveFPS"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_receive_fps" />
+        </TableRow>
+
+        <TableRow android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_delay" />
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_down_loss_package" />
+        </TableRow>
+
+        <TableRow
+            android:layout_marginBottom="50dp"
+            android:paddingVertical="3dp">
+
+            <TextView
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_bitrate" />
+
+            <TextView
+                android:id="@+id/tvStatisticDownNet"
+                android:layout_weight="1"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:text="@string/show_statistic_down_net_speech" />
+        </TableRow>
+
+
         <TableRow android:paddingVertical="3dp">
 
             <TextView
@@ -133,7 +247,6 @@
                 tools:text="@string/show_statistic_bitrate" />
 
             <TextView
-                android:id="@+id/tvStatisticFPS"
                 android:layout_weight="1"
                 android:textColor="@color/white"
                 android:textSize="12sp"
@@ -160,23 +273,6 @@
         <TableRow android:paddingVertical="3dp">
 
             <TextView
-                android:id="@+id/tvStatisticUpNet"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                tools:text="@string/show_statistic_up_net_speech" />
-
-            <TextView
-                android:id="@+id/tvStatisticDownNet"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                tools:text="@string/show_statistic_down_net_speech" />
-        </TableRow>
-
-        <TableRow android:paddingVertical="3dp">
-
-            <TextView
                 android:id="@+id/tvResolution"
                 android:layout_weight="1"
                 android:textColor="@color/white"
@@ -191,10 +287,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:src="@mipmap/close"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/tlStatistic"
         app:layout_constraintTop_toTopOf="@id/tlStatistic"
-        android:src="@mipmap/close"
         tools:visibility="visible" />
 
 
