feat:高级设置页面修改

--- a/Android/scenes/show/src/main/res/layout/show_setting_advance_item_selector.xml
+++ b/Android/scenes/show/src/main/res/layout/show_setting_advance_item_selector.xml
@@ -17,6 +17,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/show_setting_advance_quality_enhance" />
 
+    <ImageView
+        android:id="@+id/ivTip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:src="@mipmap/show_setting_advance_ic_tip"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toEndOf="@id/tvTitle"
+        app:layout_constraintTop_toTopOf="@id/tvTitle" />
+
     <TextView
         android:id="@+id/tvValue"
         android:layout_width="wrap_content"
