--- a/Android/scenes/ktv/src/main/res/layout/fragment_effect_voice.xml
+++ b/Android/scenes/ktv/src/main/res/layout/fragment_effect_voice.xml
@@ -104,6 +104,28 @@
         app:layout_constraintTop_toBottomOf="@id/hScrollView" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/cbAudioDumpText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="39dp"
+        android:text="Audio Dump"
+        android:textColor="@color/def_text_grey_979"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hScrollView" />
+
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/cbStartAudioDump"
+        android:layout_width="50dp"
+        android:layout_height="26dp"
+        android:layout_marginStart="240dp"
+        android:layout_marginTop="34dp"
+        android:button="@drawable/cb_def_selector"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hScrollView" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
