--- a/Android/scenes/ktv/src/main/res/drawable/ktv_skip_btn_bg.xml
+++ b/Android/scenes/ktv/src/main/res/drawable/ktv_skip_btn_bg.xml
@@ -2,5 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="360dp" />
-    <stroke android:width="1.16px" android:color="@color/white" />
+    <stroke
+        android:width="1.16px"
+        android:color="@color/white_20_percent" />
+
+    <solid android:color="#DF566188" />
 </shape>
