--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -12,7 +12,7 @@
         android:id="@+id/scoringView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="48dp"
         android:background="#02FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_height="0dp"
         android:background="#00000000"
         android:paddingStart="10dp"
-        android:paddingTop="10dp"
+        android:paddingTop="4dp"
         android:paddingEnd="10dp"
         android:paddingBottom="10dp"
         app:currentHighlightedTextColor="#FFE960"
@@ -39,15 +39,15 @@
         app:layout_constraintBottom_toTopOf="@+id/bgd_control_layout_lrc"
         app:layout_constraintTop_toBottomOf="@+id/scoringView"
         app:lineSpacing="8sp"
-        app:paddingTop="6dp"
-        app:startOfVerseIndicatorPaddingTop="8dp"
-        app:startOfVerseIndicatorRadius="4dp"
+        app:paddingTop="2dp"
+        app:startOfVerseIndicatorPaddingTop="6dp"
+        app:startOfVerseIndicatorRadius="6dp"
         app:textGravity="center" />
 
     <View
         android:id="@+id/bgd_control_layout_lrc"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="22dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -86,58 +86,62 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ivSkipPrelude"
         android:layout_width="80dp"
-        android:layout_height="28dp"
-        android:layout_marginBottom="30dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/ktv_skip_btn_bg"
         android:orientation="horizontal"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switchOriginal"
         app:layout_constraintStart_toEndOf="@id/ivMusicStart">
 
         <TextView
             android:id="@+id/ivSkipPreludeSkip"
-            android:layout_width="60dp"
+            android:layout_width="56dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/ktv_skip_prelude"
             android:textColor="@color/white"
-            android:textSize="12dp"></TextView>
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/ivSkipPreludeCancel"
-            android:layout_width="13dp"
-            android:layout_height="13dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_gravity="center"
-            android:background="@mipmap/ktv_skip_cancel"></ImageView>
+            android:background="@mipmap/ktv_skip_cancel" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/ivSkipPostlude"
         android:layout_width="80dp"
-        android:layout_height="28dp"
-        android:layout_marginBottom="30dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/ktv_skip_btn_bg"
         android:orientation="horizontal"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/switchOriginal"
         app:layout_constraintStart_toEndOf="@id/ivMusicStart">
 
         <TextView
             android:id="@+id/ivSkipPostludeSkip"
-            android:layout_width="60dp"
+            android:layout_width="56dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/ktv_skip_postlude"
             android:textColor="@color/white"
-            android:textSize="12dp"></TextView>
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/ivSkipPostludeCancel"
-            android:layout_width="13dp"
-            android:layout_height="13dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_gravity="center"
-            android:background="@mipmap/ktv_skip_cancel"></ImageView>
+            android:background="@mipmap/ktv_skip_cancel" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
